Fix profile view spacing issue (#826)
What's yet another CSS fix on a Sunday evening...

Reviewed-on: https://git.mills.io/yarnsocial/yarn/pulls/826
Co-committed-by: Phil S. <ullarah@noreply@mills.io>

--- a/internal/theme/static/css/99-yarn.css
+++ b/internal/theme/static/css/99-yarn.css
@@ -10,6 +10,7 @@
 .profile-button {
   display: flex;
   gap: 1rem;
+  margin-bottom: 1rem;
 }
 
 .profile-button a {
@@ -784,9 +785,9 @@ small.twt-context strong {
   margin-right: 0;
 }
 
-#podMenu li,
 #podLogo {
-  margin-left: 1rem;
+  margin-left: 0.5rem;
+  height: 100%;
 }
 
 #podMobile {
@@ -857,7 +858,7 @@ pre {
 }
 
 #postbox.drawer {
-  margin: -0.9rem 0.5rem 1rem 0.5rem;
+  margin: -0.4rem 0.5rem 1rem 0.5rem;
   padding-top: 0.7rem;
   background-color: var(--form-element-background-color);
   padding-bottom: 0.35rem;
@@ -944,7 +945,7 @@ span[title="Copyright"]:before {
     margin-bottom: 0.5rem;
   }
 
-  .container article:last-of-type:not(#profile-links):not(.h-entry) {
+  .container article:last-of-type:not(#profile-links):not(.h-entry):not(.profile-header) {
     padding-bottom: 0;
     margin-bottom: 2.25rem;
   }
@@ -1399,6 +1400,10 @@ span[title="Copyright"]:before {
     margin: 0 0 -1.4rem 0;
   }
 
+  .profile-post {
+    margin-top: 1rem;
+  }
+
   #twt-join {
     margin: 0.5rem 0 0.5rem 0;
     padding-bottom: 1.5rem !important;
@@ -1449,6 +1454,10 @@ span[title="Copyright"]:before {
     margin: 0 0 -2.4rem 0;
   }
 
+  .profile-post {
+    margin-top: 1rem;
+  }
+
   #twt-join {
     margin: 0.5rem 0 0.25rem 0;
     padding-bottom: 1.5rem !important;
@@ -1497,6 +1506,10 @@ span[title="Copyright"]:before {
 
   nav.timeline-nav:nth-of-type(2) {
     margin: -0.5rem 1rem -1rem 1rem;
+  }
+
+  .profile-post {
+    margin-top: 1rem;
   }
 
   #twt-join {
